fixed timing - typewriter caption aligns with image

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 img {
   margin-top: 4vw;
   max-width: 25vw;
+  box-shadow: 10px;
 }
 
 /*
